Added feature to configure the base path databank is served from in Apache, rather than assume /

--- a/rdfdatabank/templates/admin_api.html
+++ b/rdfdatabank/templates/admin_api.html
@@ -35,7 +35,7 @@
     <div class="List-entry">Accept: text/plain, application/json</div>
     <div class="List-contents">200 OK</div>
     <div class="List-contents">Returns a JSON-encoded list of dataset ids in that silo along with the embargo information for each dataset</div>
-    <div class="List-contents">The file <a target="_blank" href="/static/json_data/datasetsInSiloInformation.txt">datasetsInSiloInformation.txt</a> contains an example of the data returned (data_returned) </div>
+    <div class="List-contents">The file <a target="_blank" href="/${c.base}static/json_data/datasetsInSiloInformation.txt">datasetsInSiloInformation.txt</a> contains an example of the data returned (data_returned) </div>
     <div class="List-entry">Accept:*/*, default</div>
     <div class="List-contents">Returns text/HTML listing the ids of each dataset, along with a form for changing the embargo information and deleting the dataset. A form for dataset creation is also available. </div>
   </div>
@@ -119,7 +119,7 @@
       If it is a directory, the dictionary value is empty as there is no stat information </li>
       </ul>
     </div>
-    <div class="List-contents">The file <a target="_blank" href="/static/json_data/datasetInformation.txt">datasetInformation.txt</a> contains an example of the data returned (data_returned) </div>
+    <div class="List-contents">The file <a target="_blank" href="/${c.base}static/json_data/datasetInformation.txt">datasetInformation.txt</a> contains an example of the data returned (data_returned) </div>
     <div class="List-entry">Accept: application/rdf+xml, text/xml</div>
     <div class="List-contents">returns dataset's RDF manifest as RDF/XML</div>
     <div class="List-entry">Accept: text/rdf+n3</div>
@@ -303,8 +303,8 @@
       </ul>
     </div>
     <div class="List-contents">The files 
-      <a target="_blank" href="/static/json_data/datasetInformation-version0.txt">datasetInformation-version0.txt</a> and 
-      <a target="_blank" href="/static/json_data/datasetInformation-version1.txt">datasetInformation-version1.txt</a> 
+      <a target="_blank" href="/${c.base}static/json_data/datasetInformation-version0.txt">datasetInformation-version0.txt</a> and 
+      <a target="_blank" href="/${c.base}static/json_data/datasetInformation-version1.txt">datasetInformation-version1.txt</a> 
       contain an example of the data returned (data_returned) 
     </div>
     <div class="List-entry firefinder-match">Accept: application/rdf+xml, text/xml</div>
@@ -359,7 +359,7 @@
         </ul>
       </div>
       <div class="List-contents">The file
-        <a href="/static/json_data/datasetSubdirInformation.txt" target="_blank">datasetSubdirInformation.txt</a>  
+        <a href="/${c.base}static/json_data/datasetSubdirInformation.txt" target="_blank">datasetSubdirInformation.txt</a>  
         contains an example of the data returned (data_returned) 
       </div>
       <div class="List-entry">Accept: */*, default</div>
@@ -472,8 +472,8 @@
         </ul>
       </div>
       <div class="List-contents">The files
-        <a href="/static/json_data/datasetSubdirInformation-version3.txt" target="_blank">datasetSubdirInformation-version3.txt</a> and 
-        <a href="/static/json_data/datasetSubdirInformation-version1.txt" target="_blank">datasetSubdirInformation-version1.txt</a>  
+        <a href="/${c.base}static/json_data/datasetSubdirInformation-version3.txt" target="_blank">datasetSubdirInformation-version3.txt</a> and 
+        <a href="/${c.base}static/json_data/datasetSubdirInformation-version1.txt" target="_blank">datasetSubdirInformation-version1.txt</a>  
         contains an example of the data returned (data_returned) 
       </div>
       <div class="List-entry">Accept: */*, default</div>
