--- a/rdfdatabank/templates/api.html
+++ b/rdfdatabank/templates/api.html
@@ -5,11 +5,11 @@
 </%def>
 <h1>Databank API</h1>
 <h2><ul>API documentation for:
-<li class="menu"><a href="/api/silos">Silos</a></li>
-<li class="menu"><a href="/api/datasets">Datasets</a></li>
-<li class="menu"><a href="/api/items">Items</a></li>
-<li class="menu"><a href="/api/states">States</a></li>
-<p>To learn more about Databank visit the <a href="https://damssupport.ouls.ox.ac.uk/trac/databank/wiki" target="_blank">Databank wiki</a></p>
+<li class="menu"><a href="/${c.base}api/silos">Silos</a></li>
+<li class="menu"><a href="/${c.base}api/datasets">Datasets</a></li>
+<li class="menu"><a href="/${c.base}api/items">Items</a></li>
+<li class="menu"><a href="/${c.base}api/states">States</a></li>
+<p>To learn more about Databank visit the <a href="https://damssupport.bodleian.ox.ac.uk/trac/databank/wiki" target="_blank">Databank wiki</a></p>
 </ul></h2>
 
 <%include file="${c.api_file}"/>
