--- a/rdfdatabank/templates/create_new_silo.html
+++ b/rdfdatabank/templates/create_new_silo.html
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-<form class="create_silo" method="POST" enctype="multipart/form-data" action="/admin" accept-charset="UTF-8">
+<form class="create_silo" method="POST" enctype="multipart/form-data" action="/${c.base}admin" accept-charset="UTF-8">
 <div><label for="newSilo">Silo name (eg 'a' -> /a/datasets/...)</label>
 <input type="text" name="silo" id="newSilo"/></div>
 <div class="form_helper">The machine readable name of the silo, used by the system and in the urls. <br/>
