--- a/rdfdatabank/templates/home.html
+++ b/rdfdatabank/templates/home.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="bigUp">
-<a class="callToAction" href="/silos">browse data packages</a>
+<a class="callToAction" href="/${c.base}silos">browse data packages</a>
 </div>
 
 <div class="pleaseNote">
@@ -33,7 +33,7 @@
 <h3>Using the Databank API</h3>
 <p>The API provides a restful web interface to all of Databank's features.  Documentation on the API</p>
 <ul>
-<li><a href="/api"> Databank API documentation </a></li>
+<li><a href="/${c.base}api"> Databank API documentation </a></li>
 </ul>
 </div>
 
