--- a/rdfdatabank/templates/items_api.html
+++ b/rdfdatabank/templates/items_api.html
@@ -49,7 +49,7 @@
     <div class="List-contents">200 OK</div>
     <div class="List-contents">Returns a JSON-encoded list of zipfiles in dataset</div>
     <div class="List-contents"> The file
-      <a href="/static/json_data/itemInformationForDataset.txt" target="_blank">itemInformationForDataset.txt</a>
+      <a href="/${c.base}static/json_data/itemInformationForDataset.txt" target="_blank">itemInformationForDataset.txt</a>
       contains an example of the data returned (data_returned)
     </div>
     <div class="List-entry">Accept: */*, default</div>
@@ -108,7 +108,7 @@
     <div class="List-contents">200 OK</div>
     <div class="List-contents">Returns a JSON-encoded hash dict listing the contents of the ziipfile (files / directories in archive), along with the size of the uncompressed member and and the date of last modification of the member as a tuple of 6 values (Year, Month, Day of month, Hours, Minutes, Seconds).</div>
     <div class="List-contents"> The file
-      <a href="/static/json_data/itemInformationForZipFileinDataset.txt" target="_blank">itemInformationForZipFileinDataset.txt</a>
+      <a href="/${c.base}static/json_data/itemInformationForZipFileinDataset.txt" target="_blank">itemInformationForZipFileinDataset.txt</a>
       contains an example of the data returned (data_returned)
     </div>
     <div class="List-entry">Accept: */*, default</div>
