--- a/rdfdatabank/templates/logout.html
+++ b/rdfdatabank/templates/logout.html
@@ -9,6 +9,6 @@
   <div class="flash">${c.message | n}</div>
 % endif
 <p>You have successfully logged out. </p>
-<p> To login again <a href="/login">click here</a></p>
+<p> To login again <a href="/${c.base}login">click here</a></p>
 <p>&nbsp;</p>
 
