--- a/rdfdatabank/templates/part_list_display.html
+++ b/rdfdatabank/templates/part_list_display.html
@@ -1,3 +1,4 @@
+# -*- coding: utf-8 -*-
 % if c.parts:
   <ul>
   <% 
@@ -21,9 +22,9 @@ else:
 %>
     % if not part.startswith('3=') and not part.startswith('4='):
 <li>${part} ${ext}
-<a href="/${c.silo_name}/datasets/${c.id}${subpath}/${part}${urlext}"><img src="/static/styles/images/view_icon_32.png" title="view or download file"></a>
+<a href="/${c.base}${c.silo_name}/datasets/${c.id}${subpath}/${part}${urlext}"><img src="/${c.base}static/styles/images/view_icon_32.png" title="view or download file"></a>
 %     if part.endswith('.zip'):
-    <a href="/${c.silo_name}/items/${c.id}${subpath}/${part}${urlext}"><img src="/static/styles/images/view_zip_icon_32.png" title="View contents of zip file"></a>
+    <a href="/${c.base}${c.silo_name}/items/${c.id}${subpath}/${part}${urlext}"><img src="/${c.base}static/styles/images/view_zip_icon_32.png" title="View contents of zip file"></a>
 %     endif
 </li>
     % endif
