--- a/rdfdatabank/templates/search.html
+++ b/rdfdatabank/templates/search.html
@@ -84,12 +84,12 @@ else:
 			if ($('#fl' + ind).hasClass("closed")){
 			$('#fl' + ind).show();
 			$('#fl' + ind).removeClass("closed");
-			$('#fh' + ind).css("background-image", "url('/static/styles/images/fminus.png')");
+			$('#fh' + ind).css("background-image", "url('/${c.base}static/styles/images/fminus.png')");
 			$('#fs' + ind).css("background-color", "#EEE");
 			} else {
 			$('#fl' + ind).hide();
 			$('#fl' + ind).addClass("closed");
-			$('#fh' + ind).css("background-image", "url('/static/styles/images/fplus.png')");
+			$('#fh' + ind).css("background-image", "url('/${c.base}static/styles/images/fplus.png')");
 			$('#fs' + ind).css("background-color", "#BBB");
 			}
 			fhAdjust();
@@ -135,12 +135,12 @@ else:
 			if ($('#fl' + ind).hasClass("closed")){
 			$('#fl' + ind).show();
 			$('#fl' + ind).removeClass("closed");
-			$('#fh' + ind).css("background-image", "url('/static/styles/images/fminus.png')");
+			$('#fh' + ind).css("background-image", "url('/${c.base}static/styles/images/fminus.png')");
 			$('#fs' + ind).css("background-color", "#EEE");
 			} else {
 			$('#fl' + ind).hide();
 			$('#fl' + ind).addClass("closed");
-			$('#fh' + ind).css("background-image", "url('/static/styles/images/fplus.png')");
+			$('#fh' + ind).css("background-image", "url('/${c.base}static/styles/images/fplus.png')");
 			$('#fs' + ind).css("background-color", "#BBB");
 			}
 			fhAdjust();
