--- a/rdfdatabank/templates/silos_api.html
+++ b/rdfdatabank/templates/silos_api.html
@@ -23,7 +23,7 @@
 <div class="List-contents">Returns text/HTML listing the 'silos' your account can see, with links to dataset view</div>
 <div class="List-entry">Accept: text/plain, application/json (with auth) </div>
 <div class="List-contents">Returns a JSON-encoded list of exising silos your account can see. </div>
-<div class="List-contents">The file <a href="/static/json_data/silos.txt" target="_blank">silos.txt</a> contains an example of the data returned (data_returned) </div>
+<div class="List-contents">The file <a href="/${c.base}static/json_data/silos.txt" target="_blank">silos.txt</a> contains an example of the data returned (data_returned) </div>
 <div class="List-entry">Accept: */*, default (with auth)</div><div class="List-contents">Returns text/HTML listing the ’silos’ your account can see, with links to dataset view</div>
 </div>
 <div class="List">
@@ -48,7 +48,7 @@ listing the ids of each dataset, along with a form for changing the embargo info
 A form for dataset creation is also available. </div>
 <div class="List-entry">Accept: text/plain, application/json (with auth)</div>
 <div class="List-contents">Returns a JSON-encoded list of dataset ids in that silo, along with the embargo information for each dataset</div>
-<div class="List-contents">The file <a href="/static/json_data/siloInformation.txt" target="_blank">siloInformation.txt</a> contains an example of the data returned (data_returned) </div>
+<div class="List-contents">The file <a href="/${c.base}static/json_data/siloInformation.txt" target="_blank">siloInformation.txt</a> contains an example of the data returned (data_returned) </div>
 <div class="List-entry">Accept:*/*, default (with auth)</div>
 <div class="List-contents">Returns text/HTML 
 listing the ids of each dataset, along with a form for changing the embargo information and deleting the dataset. 
