--- a/rdfdatabank/templates/states_api.html
+++ b/rdfdatabank/templates/states_api.html
@@ -18,7 +18,7 @@
     <div class="rt"><a href="#globalWrapper">top</a></div>
   </div>
 </div>
-<p>Returns the state information of a silo. To view an example of the state information returned for the silo <b>Sandbox (ans["silo"])</b> see <a href="/static/json_data/SiloStateInfo.txt" target="_blank">SiloStateInfo.txt</a></p>
+<p>Returns the state information of a silo. To view an example of the state information returned for the silo <b>Sandbox (ans["silo"])</b> see <a href="/${c.base}static/json_data/SiloStateInfo.txt" target="_blank">SiloStateInfo.txt</a></p>
 <p>The state information for a silo contains the following:</p>
 <div class="List-contents"> 
 Name of the silo (machine name, used in uris) - ans["silo"]<br />
@@ -51,7 +51,7 @@ with the silo name, base uri and embargo information for each of the datasets in
     <div class="rt"><a href="#globalWrapper">top</a></div>
   </div>
 </div>
-<p>Returns the state information of the latest version of a dataset. To view an example of the state information returned for the dataset <b>dataset2</b> see <a href="/static/json_data/DatasetStateInfo-dataset2.txt" target="_blank">DatasetStateInfo-dataset2.txt</a> and <b>dataset1</b> see <a href="/static/json_data/DatasetStateInfo-dataset1-version1.txt" target="_blank">DatasetStateInfo-dataset1-version1.txt</a></p>
+<p>Returns the state information of the latest version of a dataset. To view an example of the state information returned for the dataset <b>dataset2</b> see <a href="/${c.base}static/json_data/DatasetStateInfo-dataset2.txt" target="_blank">DatasetStateInfo-dataset2.txt</a> and <b>dataset1</b> see <a href="/${c.base}static/json_data/DatasetStateInfo-dataset1-version1.txt" target="_blank">DatasetStateInfo-dataset1-version1.txt</a></p>
 <p>The state information for a dataset contains the following:</p>
 <p><b>Information about the dataset </b></p>
 <div class="List-contents"> 
@@ -105,7 +105,7 @@ The file information returns the equivalent of a stat() system call on the given
     <div class="rt"><a href="#globalWrapper">top</a></div>
   </div>
 </div>
-<p>Returns the state of a particular version of a dataset. To view an example of the state information returned for verison 0 of the dataset <b>dataset1</b> see <a href="/static/json_data/DatasetStateInfo-dataset1-version0.txt" target="_blank">DatasetStateInfo-dataset1-version0.txt</a>. For details pertaining to the information returned, see above</p>
+<p>Returns the state of a particular version of a dataset. To view an example of the state information returned for verison 0 of the dataset <b>dataset1</b> see <a href="/${c.base}static/json_data/DatasetStateInfo-dataset1-version0.txt" target="_blank">DatasetStateInfo-dataset1-version0.txt</a>. For details pertaining to the information returned, see above</p>
 <div class="todo">
 <div class="List-entry">TODO:</div>
 <div class="List-contents">Currently the state information returns information regarding all versions for some. Modify to return information peraining only to the relevant version.</div>
