--- a/rdfdatabank/templates/add_users_to_silo.html
+++ b/rdfdatabank/templates/add_users_to_silo.html
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-<form class="alter_silo" method="POST" enctype="multipart/form-data" action="/${c.silo}/admin" accept-charset="UTF-8">
+<form class="alter_silo" method="POST" enctype="multipart/form-data" action="/${c.base}${c.silo}/admin" accept-charset="UTF-8">
 <div>
 <label for="alterSiloName">Silo label</label>
 <input id="alterSiloName" type="text" name="silo" value="${c.silo}" readonly="readonly"/>
