--- a/rdfdatabank/templates/create_new_item.html
+++ b/rdfdatabank/templates/create_new_item.html
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-<form class="newitem" method="POST" action="/${c.silo_name}/datasets" accept-charset="UTF-8">
+<form class="newitem" method="POST" action="/${c.base}${c.silo_name}/datasets" accept-charset="UTF-8">
 <label for="newitem">Name:</label>
 <input type="text" name="id" id="newitem"/><br />
 <div class="form_helper">The name can only contain numbers, letters, '-' and ':', must be more than one character long and must not contain any spaces.</div>
