--- a/rdfdatabank/templates/file_upload.html
+++ b/rdfdatabank/templates/file_upload.html
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-<form method="POST" enctype="multipart/form-data" action="/${c.silo_name}/datasets/${c.id}" accept-charset="UTF-8">
+<form method="POST" enctype="multipart/form-data" action="/${c.base}${c.silo_name}/datasets/${c.id}" accept-charset="UTF-8">
 <label for="fileUpload">File:</label>
 <input type="file" name="file" id="fileUpload" /> 
 <br/><br/>
