--- a/rdfdatabank/templates/item_file_upload.html
+++ b/rdfdatabank/templates/item_file_upload.html
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-<form method="POST" enctype="multipart/form-data" action="/${c.silo_name}/datasets/${c.id}/${c.path}" accept-charset="UTF-8">
+<form method="POST" enctype="multipart/form-data" action="/${c.base}${c.silo_name}/datasets/${c.id}/${c.path}" accept-charset="UTF-8">
 <label for="itemFile">File:</label>
 <input id="itemFile" type="file" name="file" /> 
 <br/><br/>
