--- a/rdfdatabank/templates/register_new_user.html
+++ b/rdfdatabank/templates/register_new_user.html
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-<form class="create_user" method="POST" enctype="multipart/form-data" action="/users" accept-charset="UTF-8">
+<form class="create_user" method="POST" enctype="multipart/form-data" action="/${c.base}users" accept-charset="UTF-8">
 <div><label for="newUserUsername">Username:</label><input id="newUserUsername" type="textbox" name="username" /></div>
 <div><label for="newUserPassword">Password:</label><input id="newUserPassword" type="password" name="password" /></div>
 <div><label for="newUserFirstname">Firstname:</label><input id="newUserFirstname" type="text" name="firstname" /></div>
