--- a/rdfdatabank/templates/search_advanced.html
+++ b/rdfdatabank/templates/search_advanced.html
@@ -79,12 +79,12 @@ else:
 			if ($('#fl' + ind).hasClass("closed")){
 			$('#fl' + ind).show();
 			$('#fl' + ind).removeClass("closed");
-			$('#fh' + ind).css("background-image", "url('/styles/images/fminus.png')");
+			$('#fh' + ind).css("background-image", "url('/${c.base}styles/images/fminus.png')");
 			$('#fs' + ind).css("background-color", "#EEE");
 			} else {
 			$('#fl' + ind).hide();
 			$('#fl' + ind).addClass("closed");
-			$('#fh' + ind).css("background-image", "url('/styles/images/fplus.png')");
+			$('#fh' + ind).css("background-image", "url('/${c.base}styles/images/fplus.png')");
 			$('#fs' + ind).css("background-color", "#BBB");
 			}
 			fhAdjust();
@@ -130,12 +130,12 @@ else:
 			if ($('#fl' + ind).hasClass("closed")){
 			$('#fl' + ind).show();
 			$('#fl' + ind).removeClass("closed");
-			$('#fh' + ind).css("background-image", "url('/styles/images/fminus.png')");
+			$('#fh' + ind).css("background-image", "url('/${c.base}styles/images/fminus.png')");
 			$('#fs' + ind).css("background-color", "#EEE");
 			} else {
 			$('#fl' + ind).hide();
 			$('#fl' + ind).addClass("closed");
-			$('#fh' + ind).css("background-image", "url('/styles/images/fplus.png')");
+			$('#fh' + ind).css("background-image", "url('/${c.base}styles/images/fplus.png')");
 			$('#fs' + ind).css("background-color", "#BBB");
 			}
 			fhAdjust();
