--- a/rdfdatabank/templates/update_user.html
+++ b/rdfdatabank/templates/update_user.html
@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-<form class="update_user" method="POST" enctype="multipart/form-data" action="/users/${c.username}" accept-charset="UTF-8">
+<form class="update_user" method="POST" enctype="multipart/form-data" action="/${c.base}users/${c.username}" accept-charset="UTF-8">
 <div><label for="username">Username:</label>
 <input type="textbox" name="username" value="${c.username}" readonly=readonly/></div>
 
